assets/css/um-styles.css
/* ... */
.um-toggle-password i {
	transition: all .2s linear;
}

.um-toggle-password:hover i {
	color: #44b0ec;
}

.um-field-value p {
	margin: 0 0 6px 0 !important;
	padding: 0;
}

.um-field-block {
	color: #777;
	font-size: 17px;
}

.um-field-spacing {
	width: 100%;
}

.um-field-divider {
	width: 100%;
	margin: 0 0 12px 0;
	height: 24px;
	position: relative;
}

.um-field-divider-text {
	position: absolute;
	width: 100%;
	text-align: center;
	bottom: -24px;
	left: 0;
	font-size: 16px;
	padding: 10px 0;
}

.um-field-divider-text span {
	background: #fff;
	color: #555;
	display: inline-block;
	padding: 0 15px;
}

.um-field-icon {
	position: absolute;
	cursor: default;
	text-align: center !important;
	top: 2px;
	left: 0;
	width: 44px;
	font-size: 22px;
	line-height: 1.7em;
}

.um-form input[type="text"],
.um-form input[type="search"],
.um-form input[type="tel"],
.um-form input[type="number"],
.um-form input[type="password"] {
	padding: 0 12px !important;
	width: 100%;
	display: block !important;
	-moz-border-radius: 2px;
	-webkit-border-radius: 2px;
	border-radius: 2px;
	outline: none !important;
	cursor: text !important;
	font-size: 15px !important;
	height: 40px !important;
	box-sizing: border-box !important;
	box-shadow: none !important;
	margin: 0 !important;
	position: static;
}

.um-form .um-field-area-password input[type="password"] {
	padding-right: 40px !important;
}

.um-form input[type="number"] {
	width: auto;
	padding: 0 0 0 5px !important;
	height: 30px !important;
}

.um-form input[type="text"]:focus,
.um-form input[type="search"]:focus,
.um-form input[type="tel"]:focus,
.um-form input[type="number"]:focus,
.um-form input[type="password"]:focus,
.um-form textarea:focus {
	box-shadow: none !important;
	outline: none !important;
}

.um-form input[type="text"].um-iconed,
.um-form input[type="tel"].um-iconed,
.um-form input[type="password"].um-iconed { padding-left: 44px !important }

.um-form input[type="text"].um-error,
.um-form input[type="tel"].um-error,
.um-form input[type="password"].um-error { border-color: #C74A4A !important }

.um-form textarea {
	width: 100%;
	padding: 8px 12px !important;
	display: block;
	font-size: 15px !important;
	line-height: 22px !important;
	background: #fff;
	-moz-border-radius: 2px;
	-webkit-border-radius: 2px;
	border-radius: 2px;
	box-sizing: border-box;
	min-height: 80px !important;
	box-shadow: none;
	outline: none !important;
}

.um-form .um-meta-text textarea {
	max-width: 100%;
}

.um-form .wp-editor-container {
	border: 1px solid #ddd;
}

.um-form .wp-editor-container textarea {
	background: #ddd !important;
	color: #222 !important;
	border-radius: 0;
}

/*
	- Radio & Checkboxes
*/

.um-field-c .um-field-checkbox {
	margin-bottom: 14px;
	margin-top: 0 !important;
	position: relative;
}

.um-field-checkbox:not(.um-field),
.um-field-radio:not(.um-field) {
	display: block;
	margin: 8px 0;
	position: relative;
}

.um-profile.um-editing .um-field-checkbox,
.um-profile.um-editing .um-field-radio{
	cursor: pointer !important;
}

.um-field-checkbox:hover i, .um-field-radio:hover i {color: #666}

.um-field-checkbox input,
.um-field-radio input{
	opacity: 0 !important;
	display: inline !important;
	width: 0 !important;
	float: left;
}

.um-field-checkbox-state,
.um-field-radio-state {
	position: absolute;
	top: 0;
	left: 1px;
	width: 24px;
	height: 24px;
}

.um-field-checkbox-state i,
.um-field-radio-state i {
	font-size: 24px;
	line-height: 24px;
	height: 24px;
	color: #aaa;
	transition: all .2s linear;
}

.um-field-checkbox-option,
.um-field-radio-option {
	margin: 0px 0px 0px 36px;
	line-height: 24px;
	color: #888 !important;
	display: block;
}

/*
	- Group of Fields
*/

.um-field-group {
	margin-top: 20px;
}

.um-field-group-head {
	cursor: pointer;
	color: #fff;
	font-size: 16px;
	line-height: 22px;
	padding: 10px 20px;

	transition: 0.25s;
	box-sizing: border-box;
	-moz-border-radius: 4px !important;
	-webkit-border-radius: 4px !important;
	border-radius: 4px !important;
	border-top: 1px solid rgba(0,0,0,0.0) !important;
	border-bottom: 2px solid rgba(0, 0, 0, 0.1) !important;
}

.um-field-group-head i {
	font-size: 20px;
	margin: 0 8px 0 0;
}

.um-field-group-head i:before {
	vertical-align: middle !important;
}

.um-field-group-body {
	display: none;
	margin: 15px 0 0 0;
	padding: 15px 20px 5px 20px;
	background: #f9f9f9;
	-moz-border-radius: 3px;
	-webkit-border-radius: 3px;
	border-radius: 3px;
	position: relative;
	box-sizing: border-box;
	width: 100%;
}

.um-field-group-body div.um-field {
	padding: 0 0 15px 0;
}

.um-field-group-cancel {
	font-size: 18px;
	position: absolute;
	z-index: 800;
	right: 8px;
	top: 8px;
	color: #ccc !important;
	text-decoration: none !important;
}
.um-field-group-cancel:hover {color: #777 !important}

/*
	- Buttons
*/

.um div.disabled,
.um-disabled,
.um input[type="submit"]:disabled,
.um input[type="text"]:disabled,
.um input[type="number"]:disabled {
	opacity: 0.6 !important;
	cursor: no-drop !important;
}

input[type="submit"].um-button,
input[type="submit"].um-button:focus {
	vertical-align: middle !important;
	height: auto !important;
	font-size: 15px;
	cursor: pointer !important;
	width: 100%;
	box-shadow: none;
	text-shadow: none;
	font-family: inherit;
	outline: none !important;
	margin: 0;
	opacity: 1;
	-webkit-appearance: none;
}

input[type="submit"].um-button:hover {
	opacity: 1;
}
/* ... */

